# src/swagger/swagger.json
@@ -11,6 +11,242 @@
         }
     ],
     "paths": {
+      "/api/tarefa/":{
+        "get":{
+          "summary":"Get all Tarefas",
+          "tags": ["Tarefas"],
+          "security":[{"bearerAuth":[]}],
+          "responses":{
+            "401":{
+              "description":"Unauthorized"
+            },
+            "400":{
+              "description":"Erro na consulta"
+            },
+            "200":{
+              "description":"OK",
+              "content":{
+                "aplication/json":{
+                  "schema":{
+                    "type": "array",
+                    "items":{
+                      "$ref":"#/components/schemas/Tarefa"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "/api/tarefa/byIdTarefa":{
+        "get":{
+          "summary":"busca por idTarefa",
+          "tags": ["Tarefas"],
+          "security":[{"bearerAuth":[]}],
+          "parameters": [
+            {
+              "required":true,
+              "name": "idTar",
+              "in": "query",
+              "schema": {
+                "type": "string"
+              }
+            }
+          ],
+          "responses":{
+            "401":{
+              "description":"Unauthorized"
+            },
+            "400":{
+              "description":"Erro na consulta"
+            },
+            "200":{
+              "description":"OK",
+              "content":{
+                "aplication/json":{
+                  "schema":{
+                    "type": "array",
+                    "items":{
+                      "$ref":"#/components/schemas/Tarefa"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "/api/tarefa/ByNome":{
+        "get":{
+          "summary":"busca por nome",
+          "tags": ["Tarefas"],
+          "security":[{"bearerAuth":[]}],
+          "parameters": [
+            {
+              "required":true,
+              "name": "nmTar",
+              "in": "query",
+              "schema": {
+                "type": "string"
+              }
+            }
+          ],
+          "responses":{
+            "401":{
+              "description":"Unauthorized"
+            },
+            "400":{
+              "description":"Erro na consulta"
+            },
+            "200":{
+              "description":"OK",
+              "content":{
+                "aplication/json":{
+                  "schema":{
+                    "type": "array",
+                    "items":{
+                      "$ref":"#/components/schemas/Tarefa"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "/api/tarefa/ByidUsuario":{
+        "get":{
+          "summary":"Buscar tarefa por Id_Usuario",
+          "tags": ["Tarefas"],
+          "security":[{"bearerAuth":[]}],
+          "parameters": [
+            {
+              "required":true,
+              "name": "idusr",
+              "in": "query",
+              "schema": {
+                "type": "string"
+              }
+            }
+          ],
+          "responses":{
+            "401":{
+              "description":"Unauthorized"
+            },
+            "400":{
+              "description":"Registro Inexistente"
+            },
+            "200":{
+              "description":"OK",
+              "content":{
+                "aplication/json":{
+                  "schema":{
+                    "type": "array",
+                    "items":{
+                      "$ref":"#/components/schemas/Tarefa"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "/api/tarefa/dtTarefa":{
+        "get":{
+          "summary":"Buscar tarefa por periodo",
+          "tags": ["Tarefas"],
+          "security":[{"bearerAuth":[]}],
+          "parameters": [
+            {
+              "description":"yyyy-mm-dd",
+              "required":true, 
+              "name": "dtStart",
+              "in": "query",
+              "schema": {
+                "type": "string"
+              }
+            },
+            {
+              "description":"yyyy-mm-dd",
+              "required":true,
+              "name": "dtEnd",
+              "in": "query",
+              "schema": {
+                "type": "string"
+              }
+            }
+          ],
+          "responses":{
+            "401":{
+              "description":"Unauthorized"
+            },
+            "400":{
+              "description":"Erro na consulta"
+            },
+            "200":{
+              "description":"OK",
+              "content":{
+                "aplication/json":{
+                  "schema":{
+                    "type": "array",
+                    "items":{
+                      "$ref":"#/components/schemas/Tarefa"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "/api/tarefa":{
+        "post":{
+          "summary":"Insere novo usuario",
+          "tags": ["Tarefas"],
+          "security":[{"bearerAuth":[]}],
+          "requestBody":{
+            "description":"",
+            "content":{
+              "application/json":{
+                "schema":{
+                  "$ref":"#/components/schemas/Tarefa"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref":"#/components/schemas/Tarefa"
+                }
+              },
+              "application/*+json": {
+                "schema": {
+                  "$ref":"#/components/schemas/Tarefa"
+                }
+              }
+            }
+          },
+          "responses":{
+            "401":{
+              "description":"Unauthorized"
+            },
+            "400":{
+              "description":"Tarefa ja existe."
+            },
+            "200":{
+              "description":"OK",
+              "content":{
+                "aplication/json":{
+                  "schema":{
+                    "type": "object",
+                    "$ref":"#/components/schemas/Tarefa"                      
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "/api/jwtValidator":{
         "post":{
           "summary":"Valida JWT",
@@ -203,7 +439,8 @@
             }
           }
         }
-      },"/api/users/recuperacao":{
+      },
+      "/api/users/recuperacao":{
         "post":{
           "summary":"Recupera usuario e senha",
           "tags": ["Users"],
@@ -380,6 +617,49 @@
             },
             "password":{
               "type":"string"
+            }
+          }
+        },         
+        "Tarefa":{
+          "type": "object",
+          "properties": {
+            "idTarefa":{
+              "type":"int64"
+            },
+            "idUsuario":{
+              "type":"int64"
+            },
+            "nmTarefa":{
+              "type":"string"
+            },
+            "dtTarefa":{
+              "type":"datetime"
+            },
+            "dtLembreteTarefa":{
+              "type":"datetime"
+            },
+            "nrRecorrenciaTarefa":{
+              "type":"int"
+            },
+            "statusTarefa":{
+              "type":"int"
+            },
+            "Users":{
+              "type": "object",
+              "properties": {
+                "id":{
+                  "type":"int64"
+                },
+                "name":{
+                  "type":"string"
+                },
+                "email":{
+                  "type":"string"
+                },
+                "password":{
+                  "type":"string"
+                }
+              }
             }
           }
         }
